# serializer version: 1
# name: test_devices[12345]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'withings',
        '12345',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Withings',
    'model': None,
    'model_id': None,
    'name': 'henk',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_devices[f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'withings',
        'f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Withings',
    'model': 'Body+',
    'model_id': None,
    'name': 'Body+',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': <ANY>,
  })
# ---
